--- a/templates/itemsInStore.html
+++ b/templates/itemsInStore.html
@@ -29,110 +29,11 @@
             <div flex="" style="width: 100%; padding-bottom: 8px">
 
                 <div ng-repeat="item in store.items">
-                    <a ng-href="/#/item/{{item.id}}">
-                        <div style="padding-left: 8px; padding-right: 8px; padding-top: 8px">
-                            <md-card ng-click="consoletest2()"
-                                     style="outline: none; border: 0; cursor: pointer; overflow: visible; min-width: 100%; margin: 0; padding-top: 15px"
-                                     md-whiteframe="{{height}}" ng-init="height = 3" ng-mouseenter="height = 12"
-                                     ng-mouseleave="height = 3">
-                                <div layout="row">
-                                    <div flex="33" flex-gt-md="25" layout-align="center center" style="padding: 20px;">
-                                        <div style="height: 200px; background-size: contain; background-repeat: no-repeat; background-position: center"
-                                             ng-style="{'background-image':'url({{item.photo}})'}">
-
-                                        </div>
-                                    </div>
-                                    <div flex="66" flex-gt-sm="45" flex-gt-md="35" flex-gt-lg="50" layout="column"
-                                         layout-align="space-between" style="padding-left: 25px">
-                                        <div flex="" class="header-sm">{{item.name}}</div>
-                                        <div flex="">
-                                            <span style="font-size: 20px; font-weight: 200">{{item.avgRating}}</span>
-                                            <md-icon style="margin: auto; font-size: 20px">star</md-icon>
-                                            <span style="font-size: 20px; font-weight: 200">{{item.noOfReviews}} Reviews</span>
-                                        </div>
-                                        <div flex="" hide show-gt-md>Category: {{item.category}}</div>
-                                        <div flex="" hide-gt-md class="price" style="color: #009688">
-                                            {{item.price | currency}}
-                                        </div>
-                                        <div flex="" hide-gt-md>
-                                            <md-button class="md-primary md-raised">BUY NOW</md-button>
-                                        </div>
-                                        <div flex hide show-gt-md>{{item.description | firstSentence}}</div>
-                                    </div>
-                                    <div flex="" hide show-gt-md class="price" style="color: #009688">
-                                        <div layout="column" layout-align="start end" style="padding-right: 30px">
-                                            {{item.price | currency}}
-                                            <md-button class="md-primary md-raised">BUY NOW</md-button>
-                                        </div>
-                                    </div>
-                                </div>
-                            </md-card>
-                        </div>
-                    </a>
+                    <item-card></item-card>
                 </div>
             </div>
 
 
-            <!--<section layout="row">
-
-                <md-content>
-
-                    <md-card md-theme-watch flex="100">
-                        <md-card-title>
-                            <md-card-title-text>
-                                <span class="md-headline">{{store.name}}</span>
-                                <span class="md-subhead">{{store.city}}, {{store.street}}, {{store.number}}</span>
-                            </md-card-title-text>
-                            <md-card-title-media>
-                                <div class="md-media-lg card-media">
-                                </div>
-                            </md-card-title-media>
-                        </md-card-title>
-                        <md-card-actions layout="row" layout-align="end center">
-                            <md-button ng-click="getStore()">Action 1</md-button>
-                            <md-button>Action 2</md-button>
-                        </md-card-actions>
-                    </md-card>
-
-                    <md-list flex>
-                        <md-subheader class="md-no-sticky">3 line item (with hover)</md-subheader>
-                        <md-list-item class="md-3-line" ng-repeat="item in store.items">
-                            <a ng-href="/#/item/{{item.id}}">
-                                <div class="md-list-item-text" layout="column" style="overflow: visible">
-                                    <md-card ng-click="consoletest2()"
-                                             style="outline: none; border: 0; cursor: pointer; overflow: visible; min-width: 100%"
-                                             md-whiteframe="{{height}}" ng-init="height = 3" ng-mouseenter="height = 12"
-                                             ng-mouseleave="height = 3">
-                                        <md-card-title>
-                                            <md-card-title-text>
-                                                <span class="md-headline">{{item.name}}</span>
-                                                <span class="md-subhead">{{item.price | currency: "$"}}</span>
-                                            </md-card-title-text>
-                                        </md-card-title>
-                                        <md-card-content layout="row" layout-align="space-between">
-                                            <div class="md-media-xl card-media">
-                                                <img ng-src="{{item.photo}}?{{$index}}"
-                                                     style="width: 200px; height: auto" alt="{{item.photo}}"/>
-                                            </div>
-                                            <p style="margin-left: 25px">{{item.description}}</p>
-
-                                        </md-card-content>
-                                        <md-card-actions layout="row" layout-align="end center">
-                                            <p style="margin-right: 10px">views: {{item.views}}</p>
-                                            <p>id: {{item.id}}</p>
-                                            <md-button ng-click="viewUp(item.id)">View Up</md-button>
-                                            <md-button>Action 2</md-button>
-                                        </md-card-actions>
-                                    </md-card>
-                                </div>
-                            </a>
-                        </md-list-item>
-                    </md-list>
-                </md-content>
-            </section>
-
-
-    -->
         </div>
     </div>
 </div>
